# azuredevops-github-migration

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  HOW_TO_GUIDE.md  LICENSE  MANIFEST.in  README.md  TESTING.md  analyze.py  azuredevops-github-migration.cmd  batch_migrate.py  config.template.json  install_python.ps1  migrate.cmd  pyproject.toml  requirements.txt  sample_migration_plan.json  setup.py  setup.sh  sitecustomize.py  test_migrate.py  test_migrate_basic.py  utils.py
.github/workflows/: README.md  app-pool-recycle-multiple.yml  betapi-restart-and-recycle.yml  cloudflare-cache-bust-pipeline.yml  demo_migration_repo.yml  demoapi-poc.yml  deploy-demoapi-iis-pipeline.yml  devops-agent-purge-docker-images-and-containers.yml  devops-maintenance-pipelines-3236.yml  devops-maintenance-pipelines-ci.yml  devops-maintenance-pipelines.yml  dotnet-framework-check-if-over-4.6.yml  dotnet-nuget-cache-clear-bet-az-devops-01-pool1-be.yml  dotnet-nuget-cache-clear-bet-azdevops-01-pool2-zaz.yml  dotnet-nuget-cache-clear-bet-azdevops-01-pool4-bet.yml  dotnet-nuget-cache-clear-bet-bld-win01_autopipelin.yml  dotnet-nuget-cache-clear-bet-win-agent02-pool6.yml  dynatrace-integration-poc.yml  legacy-add-user-to-administrators.yml  legacy-remove-user-from-administrators.yml  linux-agent-clean.yml  linux-build-server-clean.yml  live-makemaintenancemodefalse-start-sportsbook.yml  live-makemaintenancemodetrue-stop-sportsbook.yml  publish.yml  rick.yml  ronc-email-sender-test.yml  ronstest.yml  server-connectivity-test.yml  server-grant-admin-access.yml  server-grant-normal-access.yml  server-remove-admin-access.yml  server-remove-normal-access.yml  sfvsgsdgsag.yml  site-pool-restarts.yml  sites_apppools-creation.yml  smtp-email-test.yml  syx-api-restart-and-recycle.yml  test.yml  uat-makemaintenancemodefalse-start-sportsbook.yml  (+6 more)
config/: config.template.json
docs/: REFACTORING_REPORT.md  api.md  troubleshooting.md
docs/plans/: 2026-03-05-enterprise-migration-design.md  2026-03-05-implementation-plan.md
docs/technical/: configuration.md
docs/user-guide/: ENTERPRISE_DEMO_WALKTHROUGH.md  HOW_TO_GUIDE.md  POST_MIGRATION_CHECKLIST.md  PRE_MIGRATION_CHECKLIST.md  TESTING.md
examples/: full-migration-config.json  jira-users-config.json  sample-migration-plan.json  verify-migration-workflow.yml
scripts/: Test-MigrationEnv.ps1  setup.ps1  setup.sh  verify-migration.ps1
src/: analyze.py  batch_migrate.py  migrate.py
src/azuredevops_github_migration/: __init__.py  __main__.py  analyze.py  batch_migrate.py  cli.py  config.py  doctor.py  exceptions.py  freeze.py  freeze_cli.py  init.py  interactive.py  migrate.py  naming.py  quickstart.py  state.py  status.py  utils.py  verify.py
tests/: conftest.py  test_analyze_list_flags.py  test_batch_migrate.py  test_cli_global_debug.py  test_config.py  test_doctor_env.py  test_doctor_mode_flag.py  test_dotenv_integration.py  test_env_template.py  test_exceptions.py  test_freeze.py  test_get_projects_unauthorized.py  test_git_url_sanitize.py  test_interactive_analyze_picker.py  test_interactive_analyze_skip.py  test_interactive_menu.py  test_interactive_migrate_wizard.py  test_interactive_readiness_banner.py  test_migrate.py  test_migrate_basic.py  test_naming.py  test_no_git_and_doctor.py  test_paginated_picker.py  test_quickstart_placeholder_autofix.py  test_quickstart_project_select.py  test_quickstart_search_filter.py  test_quickstart_wizard.py  test_state.py  test_status.py  test_verify.py
